# DLOPS_project

./: .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  ouptut_result.json  pyproject.toml  requirements.txt  scores.json  steps.txt  template.py
.github/workflows/: main.yaml
config/: config.yaml
research/: 03_prepare_callbacks.ipynb  05_model_evaluation.ipynb  data_ingestion.ipynb  prepare_base_model.ipynb  training.ipynb
src/cnnClassifier/: __init__.py
src/cnnClassifier/components/: data_ingestion.py  prepare_base_model.py  prepare_callback.py  training.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/constants/: __init__.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py
src/cnnClassifier/utils/: common.py
templates/: index.html
