[project]
name = "dlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.67.0",
    "ensure==1.0.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-box==6.0.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorflow>=2.21.0",
    "tqdm>=4.67.3",
    "types-pyyaml>=6.0.12.20250915",
]
